syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

import "google/protobuf/Empty.proto";
import "google/protobuf/timestamp.proto";

package CareerCloud.gRPC;

service SecurityLogin{
	rpc GetSecurityLogin(IdRequestSecurityLogin) returns(SecurityLoginPayLoad);
	rpc CreateSecurityLogin(SecurityLoginPayLoad) returns(google.protobuf.Empty);
	rpc UpdateSecurityLogin(SecurityLoginPayLoad) returns(google.protobuf.Empty);
	rpc DeleteSecurityLogin(SecurityLoginPayLoad) returns(google.protobuf.Empty);
}

message IdRequestSecurityLogin{
	string Id =1;
}

message SecurityLoginPayLoad{
	    string Id = 1;
        string Login = 2;
        string Password = 3;
        google.protobuf.Timestamp Created = 4;
        google.protobuf.Timestamp PasswordUpdate = 5;
        google.protobuf.Timestamp AgreementAccepted = 6;
        bool IsLocked = 7;
        bool IsInactive = 8;
        string EmailAddress = 9;
        string PhoneNumber = 10;
        string FullName = 11;
        bool ForceChangePassword = 12;
        string PrefferredLanguage = 13;
}
